update name for ipynb file

--- a/Movie_ETL.ipynb
+++ b/Movie_ETL.ipynb
@@ -5022,7 +5022,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "ValueError",
